2048-game-ingress/deployment-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-game
  namespace: lidoror-ns
spec:
  selector:
    matchLabels:
      app: 2048-app
  replicas: 2
  template:
    metadata:
      labels:
        app: 2048-app
    spec:
      containers:
        - name: game-app
          image: alexwhen/docker-2048
          ports:
            - containerPort: 80
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: lidoror-ns
spec:
  selector:
    app: 2048-app
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
